--- a/environment.yml
+++ b/environment.yml
@@ -1,60 +1,47 @@
 name: hypoc
 channels:
-  - pytorch
   - conda-forge
   - defaults
+  - pytorch
 dependencies:
   - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
   - blas=1.0=mkl
-  - bottleneck=1.3.5=py38h7deecbd_0
-  - ca-certificates=2023.7.22=hbcca054_0
-  - cpuonly=1.0=0
-  - cudatoolkit=11.3.1=h2bc3f7f_2
-  - freetype=2.12.1=h4a9f257_0
-  - giflib=5.2.1=h5eee18b_3
-  - intel-openmp=2023.1.0=hdb19cb5_46305
-  - jpeg=9b=h024ee3a_2
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libpng=1.6.39=h5eee18b_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.1.0=h2733197_1
-  - libuv=1.44.2=h5eee18b_0
-  - libwebp=1.2.0=h89dd481_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - mkl=2023.1.0=h213fc3f_46343
-  - mkl-service=2.4.0=py38h5eee18b_1
-  - mkl_fft=1.3.8=py38h5eee18b_0
-  - mkl_random=1.2.4=py38hdb19cb5_0
-  - ncurses=6.4=h6a678d5_0
-  - ninja=1.10.2=h06a4308_5
-  - ninja-base=1.10.2=hd09550d_5
-  - numexpr=2.8.4=py38hc78ab66_1
-  - numpy=1.24.3=py38hf6e8229_1
-  - numpy-base=1.24.3=py38h060ed82_1
-  - openssl=3.0.11=h7f8727e_2
-  - pandas=2.0.3=py38h1128e8f_0
-  - pillow=9.3.0=py38hace64e9_1
-  - pip=23.2.1=py38h06a4308_0
-  - python=3.8.18=h955ad1f_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-tzdata=2023.3=pyhd8ed1ab_0
-  - pytz=2023.3.post1=pyhd8ed1ab_0
-  - readline=8.2=h5eee18b_0
-  - setuptools=68.0.0=py38h06a4308_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.41.2=h5eee18b_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tk=8.6.12=h1ccaba5_0
-  - typing_extensions=4.7.1=py38h06a4308_0
-  - wheel=0.38.4=py38h06a4308_0
-  - xz=5.4.2=h5eee18b_0
-  - zlib=1.2.13=h5eee18b_0
-  - zstd=1.4.9=haebb681_0
+  - bottleneck=1.3.5
+  - ca-certificates=2023.7.22
+  - cudatoolkit=11.3.1
+  - freetype=2.12.1
+  - giflib=5.2.1
+  - intel-openmp=2023.1.0
+  - jpeg=9b
+  - lcms2=2.12
+  - libffi=3.4.4
+  - libpng=1.6.39
+  - libtiff=4.1.0
+  - libuv=1.44.2
+  - libwebp=1.2.0
+  - lz4-c=1.9.4
+  - mkl=2023.1.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.8
+  - mkl_random=1.2.4
+  - ninja=1.10.2
+  - numexpr=2.8.4
+  - numpy=1.24.3
+  - numpy-base=1.24.3
+  - openssl=3.0.11
+  - pandas=2.0.3
+  - pillow=9.3.0
+  - pip=23.2.1
+  - python=3.8.18
+  - setuptools=68.0.0
+  - sqlite=3.41.2
+  - tbb=2021.8.0
+  - tk=8.6.12
+  - typing_extensions=4.7.1
+  - wheel=0.38.4
+  - xz=5.4.2
+  - zlib=1.2.13
+  - zstd=1.4.9
   - pip:
     - ansible==6.7.0
     - ansible-core==2.13.12
